Conclusao do layout

--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+@keyframes pisca {
+    0% { opacity: 0.2;}
+    50% { opacity: 1;}
+    100% { opacity: 0.2;}
+}
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .urna {
+    margin-top: 50px;
     background-color: #dbd5c9;
     padding: 30px;
     display: flex;
@@ -16,6 +23,92 @@ body {
     height: 320px;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1);
     border: 2px solid #555555;
+    display: flex;
+    flex-direction: column;
+}
+
+.d-1 {
+    flex: 1;
+    display: flex; 
+}
+
+.d-1-left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.d-1-1 {
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.d-1-2 {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.d-1-3 {
+    height: 50px;
+}
+
+.numero {
+    display: inline-block;
+    width: 30px;
+    height: 40px;
+    border: 1px solid #000000;
+    text-align: center;
+    line-height: 40px;
+    font-size: 25px;
+
+}
+.pisca {
+    animation-name: pisca;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+.d-1-4 {
+    flex: 1;
+    line-height: 30px;
+}
+
+.d-1-right {
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-right: 10px;
+    align-items: center;
+}
+
+.d-1-image {
+    border: 1px solid #000000;
+    background-color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
+}
+
+.d-1-image.small {
+    width: 80%;
+    font-size: 12px;
+}
+
+.d-1-image img {
+    width: 100%;
+}
+
+.d-2 {
+    height: 50px;
+    font-size: 14px;
+    border-top: 2px solid #000000;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .teclado {
@@ -54,6 +147,7 @@ body {
     color: #000000;
     font-size: 15px;
 }
+
 .botao--confirma {
     background-color: #48C079;
     color: #000000;
